--- a/index.pug
+++ b/index.pug
@@ -13,13 +13,14 @@ html
     meta(property='og:url', content='https://FarbVelo.elastiq.ch/')
     meta(property='og:title', content='FarbVelo — Random Color Cycler')
     meta(property='og:description', content='Explorative color palette editor.')
-    meta(property='og:image', content='https://FarbVelo.elastiq.ch/FarbVelo.png')
+    meta(property='og:image', content='https://farbvelo.elastiq.ch/farbvelo.png')
+    
     //  Twitter
     meta(property='twitter:card', content='summary_large_image')
     meta(property='twitter:url', content='https://FarbVelo.elastiq.ch/')
     meta(property='twitter:title', content='FarbVelo — Random Color Cycler')
     meta(property='twitter:description', content='Explorative color palette editor.')
-    meta(property='twitter:image', content='https://FarbVelo.elastiq.ch/FarbVelo.png')
+    meta(property='twitter:image', content='https://farbvelo.elastiq.ch/farbvelo.png')
 
     link(rel="preconnect", href="https://fonts.gstatic.com")
     link(href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap", rel="stylesheet")
