nicer sidepannel styles

--- a/index.pug
+++ b/index.pug
@@ -4,23 +4,25 @@ html
   head
     meta(charset='UTF-8')
 
-    title FarbVelo — Random Color Cycler
-    meta(name='title', content='FarbVelo — Random Color Cycler')
+    title FarbVelo —— Random Color Cycler
+    meta(name='title', content='FarbVelo —— Random Color Cycler')
     meta(name='description', content='Explorative color palette editor.')
 
     //  Open Graph / Facebook
     meta(property='og:type', content='website')
     meta(property='og:url', content='https://FarbVelo.elastiq.ch/')
-    meta(property='og:title', content='FarbVelo — Random Color Cycler')
+    meta(property='og:title', content='FarbVelo —— Random Color Cycler')
     meta(property='og:description', content='Explorative color palette editor.')
     meta(property='og:image', content='https://farbvelo.elastiq.ch/farbvelo.png')
     
     //  Twitter
     meta(property='twitter:card', content='summary_large_image')
     meta(property='twitter:url', content='https://FarbVelo.elastiq.ch/')
-    meta(property='twitter:title', content='FarbVelo — Random Color Cycler')
+    meta(property='twitter:title', content='FarbVelo —— Random Color Cycler')
     meta(property='twitter:description', content='Explorative color palette editor.')
     meta(property='twitter:image', content='https://farbvelo.elastiq.ch/farbvelo.png')
+
+    meta(name="viewport", content="width=device-width, initial-scale=1")
 
     link(rel="preconnect", href="https://fonts.gstatic.com")
     link(href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap", rel="stylesheet")
