--- a/index.pug
+++ b/index.pug
@@ -46,10 +46,23 @@ html
             input(type="number", v-model="colorsInGradient", min="2", :max="amount")
 
         label.pannel__setting 
+          h4.pannel__settingtitle Randomizer Engine
+          .pannel__inputs 
+            select(v-model="geneartorFunction")
+              option(v-for="functionName in generatorFunctionList", :value=functionName).
+                {{ functionName }}
+
+        label.pannel__setting 
           h4.pannel__settingtitle Mix Padding
           .pannel__inputs 
             input(type="range", v-model="padding", min="0", max="1", step=".001")
             input(type="number", v-model="padding", min="0", max="1", step=".001")
+        
+        label.pannel__setting(v-if="geneartorFunction !== 'Full Random'") 
+          h4.pannel__settingtitle Min. Hue Distance
+          .pannel__inputs 
+            input(type="range", v-model="minHueDistance", min="0", :max="360/colorsInGradient", step="1")
+            input(type="number", v-model="minHueDistance", min="0", :max="360/colorsInGradient", step="1")
 
         label.pannel__setting 
           h4.pannel__settingtitle Interpolation Model
@@ -58,7 +71,7 @@ html
               each mode in ['lab', 'hsl', 'hsv', 'hsi', 'lch', 'rgb', 'lrgb']
                 option(value=mode)=mode
 
-        label.pannel__setting.pannel__setting--inline
+        label.pannel__setting.pannel__setting--inline(v-if="geneartorFunction !== 'Full Random'")
           input(type="checkbox", v-model="randomOrder") 
           h4.pannel__settingtitle Randomize Order
         
