adds new color generation engines

--- a/index.pug
+++ b/index.pug
@@ -4,21 +4,21 @@ html
   head
     meta(charset='UTF-8')
 
-    title FarbVelo —— Random Color Cycler
-    meta(name='title', content='FarbVelo —— Random Color Cycler')
+    title FarbVelo — Random Color Cycler
+    meta(name='title', content='FarbVelo — Random Color Cycler')
     meta(name='description', content='Explorative color palette editor.')
 
     //  Open Graph / Facebook
     meta(property='og:type', content='website')
     meta(property='og:url', content='https://FarbVelo.elastiq.ch/')
-    meta(property='og:title', content='FarbVelo —— Random Color Cycler')
+    meta(property='og:title', content='FarbVelo — Random Color Cycler')
     meta(property='og:description', content='Explorative color palette editor.')
     meta(property='og:image', content='https://farbvelo.elastiq.ch/farbvelo.png')
     
     //  Twitter
     meta(property='twitter:card', content='summary_large_image')
     meta(property='twitter:url', content='https://FarbVelo.elastiq.ch/')
-    meta(property='twitter:title', content='FarbVelo —— Random Color Cycler')
+    meta(property='twitter:title', content='FarbVelo — Random Color Cycler')
     meta(property='twitter:description', content='Explorative color palette editor.')
     meta(property='twitter:image', content='https://farbvelo.elastiq.ch/farbvelo.png')
 
