nicer sidepannel styles

--- a/index.pug
+++ b/index.pug
@@ -92,15 +92,18 @@ html
         .footer
           article.footer__about
             h2 Farbvelo
-            ol
-              li Picking ℕ0 hue's (color stops) using <a href="https://www.hsluv.org/" hreflang="en">HSLuv<a> at a user defined minimum angle ∠.
-              li Interpolating between color stops in CIE L*a*b* by default, using <a href="https://gka.github.io/chroma.js/">chroma.js</a>.
-              li Finding pleasing <a href="https://github.com/meodai/color-names">color names</a> using the color name <a href="https://github.com/meodai/color-names#api-">API</a>
-              li Icons made by <a href="https://thenounproject.com/search/?q=reload&i=1973430">Ravindra Kalkani</a>.
-              li Originally released as a <a href="https://codepen.io/meodai/pen/RerqjG" hreflang="en">Codepen</a>.
-              li Source is on <a href="https://github.com/meodai/farbvelo">github</a> and liscensed under a <a href="https://github.com/meodai/farbvelo/blob/main/LICENSE.md">Creative Commons Attribution Share Alike 4.0</a> lisence.
-              
-
+            p. 
+              FarbVelo (Swiss-German for color bicycle) is a playful color picking tool. It uses simple rules and lots of random numbers to help you come up with pleasing color combinations or just chill while cycling through color paletts (I almost find it a bit psychadelic while listening to <a href="https://mynoise.net/NoiseMachines/tropicalRainNoiseGenerator.php">custom made white noise</a>). 
+            aside
+              h2 About
+              ol
+                li Picking ℕ0 hue's (color stops) using <a href="https://www.hsluv.org/" hreflang="en">HSLuv<a> at a user defined minimum angle ∠.
+                li Interpolating between color stops in CIE L*a*b* by default, using <a href="https://gka.github.io/chroma.js/">chroma.js</a>.
+                li Finding pleasing <a href="https://github.com/meodai/color-names">color names</a> using the color name <a href="https://github.com/meodai/color-names#api-">API</a>
+                li Icons made by <a href="https://thenounproject.com/search/?q=reload&i=1973430">Ravindra Kalkani</a>.
+                li Originally released as a <a href="https://codepen.io/meodai/pen/RerqjG" hreflang="en">Codepen</a>.
+                li Source is on <a href="https://github.com/meodai/farbvelo">github</a> and liscensed under a <a href="https://github.com/meodai/farbvelo/blob/main/LICENSE.md">Creative Commons Attribution Share Alike 4.0</a> lisence.
+                
           footer
             a(href="https://www.elastiq.ch/" hreflang="en").ellogo
               svg(xmlns='http://www.w3.org/2000/svg' viewbox='0 0 352 185')
