--- a/main.scss
+++ b/main.scss
@@ -478,6 +478,11 @@ body {
   margin-top: 2rem;
   padding-top: 1rem;
 
+  p {
+    margin-top: 1em;
+    margin-bottom: 2em;
+  }
+  
   ol, ul, li {
     list-style: none;
   }
