--- a/index.pug
+++ b/index.pug
@@ -93,7 +93,7 @@ html
           article.footer__about
             h2 Farbvelo
             p. 
-              FarbVelo (Swiss-German for color bicycle) is a playful color picking tool. It uses simple rules and lots of random numbers to help you come up with pleasing color combinations or just chill while cycling through color paletts (I almost find it a bit psychadelic while listening to <a href="https://mynoise.net/NoiseMachines/tropicalRainNoiseGenerator.php">custom made white noise</a>). 
+              FarbVelo (Swiss-German for color bicycle) is a playful color picking tool. It uses simple rules and lots of random numbers to help you come up with pleasing color combinations or just chill while cycling through color harmonies (I almost find it a bit psychedelic while listening to <a href="https://mynoise.net/NoiseMachines/tropicalRainNoiseGenerator.php">custom made white noise</a>). 
             aside
               h2 About
               ol
@@ -102,7 +102,7 @@ html
                 li Finding pleasing <a href="https://github.com/meodai/color-names">color names</a> using the color name <a href="https://github.com/meodai/color-names#api-">API</a>
                 li Icons made by <a href="https://thenounproject.com/search/?q=reload&i=1973430">Ravindra Kalkani</a>.
                 li Originally released as a <a href="https://codepen.io/meodai/pen/RerqjG" hreflang="en">Codepen</a>.
-                li Source is on <a href="https://github.com/meodai/farbvelo">github</a> and liscensed under a <a href="https://github.com/meodai/farbvelo/blob/main/LICENSE.md">Creative Commons Attribution Share Alike 4.0</a> lisence.
+                li Source is on <a href="https://github.com/meodai/farbvelo">github</a> and licensed under a <a href="https://github.com/meodai/farbvelo/blob/main/LICENSE.md">Creative Commons Attribution Share Alike 4.0</a> license.
                 
           footer
             a(href="https://www.elastiq.ch/" hreflang="en").ellogo
