adds palette names

--- a/main.scss
+++ b/main.scss
@@ -508,7 +508,7 @@ body {
   font-weight: normal;
   //font-style: italic;
   text-align: center;
-  top: 100%;
+  bottom: 100%;
   font-size: .8rem;
   padding: 1rem;
   color: #fff;
