moves the palette name to the sdepannel

--- a/main.scss
+++ b/main.scss
@@ -506,7 +506,7 @@ body {
 
 .title {
   font-weight: bold;
-  //font-style: italic;
+  font-style: italic;
   color: #fff;
   font-size: 1rem;
   margin-bottom: 1em;
