--- a/index.pug
+++ b/index.pug
@@ -24,9 +24,11 @@ html
 
     meta(name="viewport", content="width=device-width, initial-scale=1")
 
-    link(rel="preconnect", href="https://fonts.gstatic.com")
-    link(href="https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap", rel="stylesheet")
+    link(href="https://rsms.me/inter/inter-ui.css", rel="stylesheet")
 
+    link(rel="preconnect", href="https://fonts.gstatic.com")
+    link(href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap", rel="stylesheet")
+    
     link(rel='stylesheet', media='all',  href='main.scss')
 
   body
