--- a/index.pug
+++ b/index.pug
@@ -42,40 +42,40 @@ html
         label.pannel__setting 
           h4.pannel__settingtitle 
             span Colors
-            input(type="number", v-model="amount", min="3", max="10")
+            input(type="number", v-model.number="amount", min="3", max="10")
 
           .pannel__inputs 
-            input(type="range", v-model="amount", min="3", max="10")
+            input(type="range", v-model.number="amount", min="3", max="10")
 
         label.pannel__setting 
           h4.pannel__settingtitle 
             span Color Stops
-            input(type="number", v-model="colorsInGradient", min="2", :max="amount")
+            input(type="number", v-model.number="colorsInGradient", min="2", :max="amount")
           .pannel__inputs 
-            input(type="range", v-model="colorsInGradient", min="2", :max="amount")
+            input(type="range", v-model.number="colorsInGradient", min="2", :max="amount")
 
         label.pannel__setting 
           h4.pannel__settingtitle Randomizer Engine
           .pannel__inputs 
-            select(v-model="geneartorFunction")
+            select(v-model.number="geneartorFunction")
               option(v-for="functionName in generatorFunctionList", :value=functionName).
                 {{ functionName }}
 
         label.pannel__setting 
           h4.pannel__settingtitle 
             span Mix Padding
-            input(type="number", v-model="padding", min="0", max="1", step=".001")
+            input(type="number", v-model.number="padding", min="0", max="1", step=".001")
         
           .pannel__inputs 
-            input(type="range", v-model="padding", min="0", max="1", step=".001")
+            input(type="range", v-model.number="padding", min="0", max="1", step=".001")
             
         label.pannel__setting(v-if="geneartorFunction !== 'Full Random'") 
           h4.pannel__settingtitle 
             span Min. Hue Distance
-            input(type="number", v-model="minHueDistance", min="0", :max="360/colorsInGradient", step="1")
+            input(type="number", v-model.number="minHueDistance", min="0", :max="360/colorsInGradient", step="1")
 
           .pannel__inputs 
-            input(type="range", v-model="minHueDistance", min="0", :max="360/colorsInGradient", step="1")
+            input(type="range", v-model.number="minHueDistance", min="0", :max="360/colorsInGradient", step="1")
             
         label.pannel__setting 
           h4.pannel__settingtitle Interpolation Model
