--- a/index.pug
+++ b/index.pug
@@ -1,6 +1,6 @@
 doctype html
 
-html
+html(lang="en-US")
   head
     meta(charset='UTF-8')
 
@@ -129,9 +129,9 @@ html
       
       .colors
         
-        button.refresh(v-on:click="newColors").
+        button.refresh(v-on:click="newColors", aria-label="generate new palette").
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 23 23" version="1.1" x="0px" y="0px"><path d="M 12.109896,2.9653518 C 10.830826,2.9134678 9.5257058,3.132602 8.2817758,3.648946 c -3.9806,1.652399 -6.2540499,5.897846 -5.4179699,10.123046 0.8360799,4.2253 4.5540699,7.274132 8.8613301,7.269532 a 0.9995584,1.0006417 14.999899 1 0 0,-2 c -3.3667302,0 -6.2475202,-2.360557 -6.9004002,-5.660157 -0.65294,-3.2997 1.11025,-6.592765 4.22266,-7.884765 3.1124002,-1.292 6.6825102,-0.213669 8.5488302,2.582031 1.85391,2.77709 1.49946,6.460477 -0.8418,8.845703 l 0.0781,-2.365234 a 1.0001,1.0001 0 0 0 -0.98242,-1.046875 1.0001,1.0001 0 0 0 -1.01758,0.982422 l -0.15235,4.59375 a 1.0001,1.0001 0 0 0 1.03321,1.033203 l 4.5957,-0.152344 a 1.0001,1.0001 0 1 0 -0.0664,-1.998047 l -1.79492,0.06055 c 2.74739,-3.056097 3.10892,-7.618693 0.80859,-11.064453 -1.64326,-2.461525 -4.33252,-3.887808 -7.14648,-4.0019532 z"/></svg>
-        button.settings(v-on:click="toggleSettings").
+        button.settings(v-on:click="toggleSettings", aria-label="show settngs pannel").
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 77.6 85.4">
             <g>
               <path d="M73.9,39H66.3a13.29,13.29,0,0,0-12.7-9.7A13.63,13.63,0,0,0,40.8,39H3.7a3.7,3.7,0,0,0,0,7.4H40.8a13.16,13.16,0,0,0,25.4,0h7.6a3.69,3.69,0,0,0,3.7-3.7A3.55,3.55,0,0,0,73.9,39ZM53.6,48.7a6,6,0,0,1-6-6,6,6,0,0,1,12,0A6,6,0,0,1,53.6,48.7Z"/>
