--- a/index.pug
+++ b/index.pug
@@ -32,7 +32,10 @@ html(lang="en-US")
     link(rel='stylesheet', media='all',  href='main.scss')
 
   body
-    #app.wrap(:class="{'wrap__hasOutlines': hasOutlines, 'wrap__hasGradients': hasGradients, 'wrap__showSettings': settingsVisible, 'wrap__hasBackground': hasBackground,}")
+    #app.wrap(
+      ref="app",
+      :style="{'--color-first': firstColor, '--color-last': lastColor}" 
+      :class="{'wrap__hasOutlines': hasOutlines, 'wrap__hasGradients': hasGradients, 'wrap__showSettings': settingsVisible, 'wrap__hasBackground': hasBackground,}")
       .bg(:style="{'background-image': backgroundGradient}")
       .pannel
         span.pannel__title
@@ -143,8 +146,12 @@ html(lang="en-US")
               <path d="M73.9,68.3H37a13.16,13.16,0,0,0-25.4,0H3.7A3.69,3.69,0,0,0,0,72a3.63,3.63,0,0,0,3.7,3.7h7.9a13.16,13.16,0,0,0,25.4,0H73.9A3.69,3.69,0,0,0,77.6,72,3.63,3.63,0,0,0,73.9,68.3ZM24.3,78a6,6,0,0,1-6-6,6,6,0,0,1,12,0A6,6,0,0,1,24.3,78Z"/>
             </g>
           </svg>
+        button.copy(v-on:click="copy", aria-label="copy all colors to clipboard").
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 26.25 36.8">
+            <path d="M12.9,0A4.12,4.12,0,0,0,8.79,4.1a1.27,1.27,0,0,0,0,.2H5.62A5.63,5.63,0,0,0,0,9.93V31.18A5.62,5.62,0,0,0,5.62,36.8h15a5.63,5.63,0,0,0,5.63-5.62V9.93A5.64,5.64,0,0,0,20.62,4.3H18.74v0l-.28,0H17c0-.07,0-.13,0-.2A4.12,4.12,0,0,0,12.9,0Zm0,1.88a2.2,2.2,0,0,1,2.22,2.2v0a2.13,2.13,0,0,1-.11.7A1,1,0,0,0,15.26,6a1,1,0,0,0,.82.17h2.38c.08,0,.11,0,.11.11V8.12c0,.08,0,.11-.11.11H7.79c-.08,0-.11,0-.11-.11V6.3a.1.1,0,0,1,.09-.11H10a1,1,0,0,0,.75-.48.94.94,0,0,0,0-.89,2.38,2.38,0,0,1-.11-.7,2.2,2.2,0,0,1,2.19-2.23h0ZM5.62,6.18h.19s0,.08,0,.11V8.11a2,2,0,0,0,2,2H18.46a2,2,0,0,0,2-2V6.29a.45.45,0,0,0,0-.11h.18a3.74,3.74,0,0,1,3.75,3.75h0V31.18a3.74,3.74,0,0,1-3.75,3.75h-15a3.74,3.74,0,0,1-3.75-3.75h0V9.93A3.75,3.75,0,0,1,5.62,6.18Z"/>
+          </svg>
+
         color(v-for="(c, i) in colors", :name="names.length ? names[i] : 'rainbow'", :colorvaluetype="colorValueType", :colorhex="c")
-        
-        
+
     script(src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.17/vue.min.js")
     script(src="main.js")
