--- a/main.scss
+++ b/main.scss
@@ -71,7 +71,8 @@ body {
     border: 2px solid #fff;
   }
   .refresh,
-  .settings {
+  .settings,
+  .copy {
     box-shadow: 0 0 0 2px #fff;
   }
   .colors {
