adds favicon generator

--- a/index.pug
+++ b/index.pug
@@ -8,6 +8,8 @@ html(lang="en-US")
     meta(name='title', content='FarbVelo — Random Color Cycler')
     meta(name='description', content='Explorative color palette editor.')
 
+    link(rel="icon", href="/favicon.ico", type="image/x-icon")
+
     //  Open Graph / Facebook
     meta(property='og:type', content='website')
     meta(property='og:url', content='https://FarbVelo.elastiq.ch/')
