adds keyboard controls

--- a/index.pug
+++ b/index.pug
@@ -4,9 +4,9 @@ html(lang="en-US")
   head
     meta(charset='UTF-8')
 
-    title FarbVelo — Random Color Cycler
+    title FarbVelo —— Random Color Cycler
     meta(name='title', content='FarbVelo — Random Color Cycler')
-    meta(name='description', content='Explorative color palette editor.')
+    meta(name='description', content='Generative color harmonies. The random color expolorer')
 
     link(rel="icon", href="/favicon.ico", type="image/x-icon")
 
@@ -14,14 +14,14 @@ html(lang="en-US")
     meta(property='og:type', content='website')
     meta(property='og:url', content='https://FarbVelo.elastiq.ch/')
     meta(property='og:title', content='FarbVelo — Random Color Cycler')
-    meta(property='og:description', content='Explorative color palette editor.')
+    meta(property='og:description', content='Generative color harmonies. The random color expolorer')
     meta(property='og:image', content='https://farbvelo.elastiq.ch/farbvelo.png')
     
     //  Twitter
     meta(property='twitter:card', content='summary_large_image')
     meta(property='twitter:url', content='https://FarbVelo.elastiq.ch/')
     meta(property='twitter:title', content='FarbVelo — Random Color Cycler')
-    meta(property='twitter:description', content='Explorative color palette editor.')
+    meta(property='twitter:description', content='Generative color harmonies. The random color expolorer')
     meta(property='twitter:image', content='https://farbvelo.elastiq.ch/farbvelo.png')
 
     meta(name="viewport", content="width=device-width, initial-scale=1")
@@ -105,7 +105,6 @@ html(lang="en-US")
           input(type="checkbox", v-model="hasOutlines")
           h4.pannel__settingtitle Visually Separate Things
 
-        
         label.pannel__setting 
           h4.pannel__settingtitle Color Values
           .pannel__inputs 
